[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Font/fonts/source-code-pro/source-code-pro-2.010R-ro-1.030R-it/TTF/SourceCodePro-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Common/MasteryTopic.gd" type="Script" id=2]
[ext_resource path="res://Assets/Common/TotalSummary.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Common/TopicSummary.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 38
outline_color = Color( 0.643137, 0.345098, 0.345098, 1 )
font_data = ExtResource( 1 )

[node name="MasteryTopic" type="Node2D"]
script = ExtResource( 2 )
dropdown_path = NodePath("dropdown")

[node name="Title" type="Label" parent="."]
margin_left = 457.74
margin_top = 12.9093
margin_right = 1490.74
margin_bottom = 178.909
custom_fonts/font = SubResource( 3 )
text = "Mastery of Topic"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Http_stuList" type="HTTPRequest" parent="."]

[node name="Http_stuProfile" type="HTTPRequest" parent="."]

[node name="Http_leaderboard" type="HTTPRequest" parent="."]

[node name="Back" type="Button" parent="."]
margin_left = 1623.81
margin_top = 74.0953
margin_right = 1783.81
margin_bottom = 113.095
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dropdown" type="OptionButton" parent="."]
anchor_left = 0.286
anchor_top = 0.347
anchor_right = 0.286
anchor_bottom = 0.347
margin_left = 449.215
margin_top = 216.289
margin_right = 776.215
margin_bottom = 269.289
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHeader" type="Label" parent="."]
margin_left = 57.0859
margin_top = 351.8
margin_right = 673.086
margin_bottom = 404.8
custom_fonts/font = SubResource( 2 )
text = "Player's Information"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StudentListLabel" type="Label" parent="."]
margin_left = 63.1544
margin_top = 212.837
margin_right = 379.154
margin_bottom = 273.837
custom_fonts/font = SubResource( 2 )
text = "Student Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 196.155
margin_top = 409.983
margin_right = 503.155
margin_bottom = 450.983
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
margin_left = 63.4481
margin_top = 479.864
margin_right = 279.448
margin_bottom = 528.864
custom_fonts/font = SubResource( 2 )
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="Label" parent="."]
margin_left = 340.919
margin_top = 485.602
margin_right = 616.919
margin_bottom = 534.602
custom_fonts/font = SubResource( 2 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterLabel" type="Label" parent="."]
margin_left = 56.8431
margin_top = 730.32
margin_right = 286.843
margin_bottom = 779.32
custom_fonts/font = SubResource( 2 )
text = "Character:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterInput" type="Label" parent="."]
margin_left = 342.066
margin_top = 732.541
margin_right = 618.066
margin_bottom = 781.541
custom_fonts/font = SubResource( 2 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgelLabel" type="Label" parent="."]
margin_left = 56.9482
margin_top = 559.413
margin_right = 272.948
margin_bottom = 608.413
custom_fonts/font = SubResource( 2 )
text = "Age:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgeInput" type="Label" parent="."]
margin_left = 342.395
margin_top = 566.964
margin_right = 618.395
margin_bottom = 615.964
custom_fonts/font = SubResource( 2 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenderLabel" type="Label" parent="."]
margin_left = 53.5846
margin_top = 643.502
margin_right = 269.585
margin_bottom = 692.502
custom_fonts/font = SubResource( 2 )
text = "Gender:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenderInput" type="Label" parent="."]
margin_left = 339.031
margin_top = 651.054
margin_right = 615.031
margin_bottom = 700.054
custom_fonts/font = SubResource( 2 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_topics" parent="." instance=ExtResource( 3 )]
margin_left = 915.337
margin_top = 349.245
margin_right = 1522.34
margin_bottom = 453.245

[node name="total_time" parent="." instance=ExtResource( 3 )]
margin_left = 917.431
margin_top = 470.061
margin_right = 1524.43
margin_bottom = 574.061

[node name="Summary_mass" parent="." instance=ExtResource( 4 )]
margin_left = 926.172
margin_top = 756.947
margin_right = 1263.18
margin_bottom = 968.947

[node name="Summary_light" parent="." instance=ExtResource( 4 )]
margin_left = 1316.94
margin_top = 756.947
margin_right = 1653.94
margin_bottom = 968.947

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 822.0
margin_top = 294.0
margin_right = 847.0
margin_bottom = 834.0
color = Color( 0.572549, 0.435294, 0.611765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverallTopicLabel" type="Label" parent="."]
margin_left = 928.112
margin_top = 659.541
margin_right = 1411.11
margin_bottom = 746.541
custom_fonts/font = SubResource( 2 )
text = "Overall Topic Scores"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorNotification" type="Label" parent="."]
margin_left = 514.48
margin_top = 147.776
margin_right = 1286.48
margin_bottom = 221.776
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="Http_stuProfile" to="." method="_on_Http_stuProfile_request_completed"]
[connection signal="request_completed" from="Http_leaderboard" to="." method="_on_Http_leaderboard_request_completed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
